spacing fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -353,7 +353,7 @@ footer.bk-footer h2 {
 .widget.button button,
 .contactform button, .contactform button.btn, 
 .advancedcontactform button, .advancedcontactform button.btn {
-    padding: 12px 18px;
+    padding: 0 24px;
     margin: 0;
     border: 0;
     font-family: @font-swatch7-font-family;
@@ -869,8 +869,6 @@ button.blog-search-submit-button, .widget.signupform button, .widget.profile but
             }
         }
         button.btn {
-            padding: 0 24px;
-            line-height: 40px;
             @media @mobile {
                 width: 100%;
             }
